LAYOUT – fix extra space on main

--- a/css/global.styl
+++ b/css/global.styl
@@ -47,6 +47,10 @@ dt {
   padding: $gutter $gutter ($gutter/2);
   background: $c-grey-lightest;
 }
+
+body > svg {
+  hide();
+}
 .icon {
   fill: currentColor;
 }
