--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -20,3 +20,14 @@ mq($$size) {
     {block}
   }
 }
+
+hide() {
+  border: 0 !important;
+  clip: rect(0 0 0 0) !important;
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+}
